# CoffeeReports

./: pyproject.toml  readme.md
coffee_reports/: cli.py  io.py  models.py
coffee_reports/reports/: __init__.py  base.py  median_coffee.py
tests/: conftest.py  test_cli.py  test_io.py  test_median_coffee.py  test_reports_registry.py
